@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.tvondesizonexl" name="TV on DESI ZONE" version="2.2.4"
+<addon id="plugin.video.tvondesizonexl" name="TV on DESI ZONE" version="2.2.5"
 	provider-name="ajdeveloped">
 	<requires>
 		<import addon="xbmc.python" version="2.1.0" />
