@@ -1,3 +1,6 @@
+[B]Version 2.2.5[/B]
+- Added Bajao from EROSNOW.com.
+
 [B]Version 2.2.4[/B]
 - Fix for high quality stream in auto play.
 
